Fixed #315 - Tabulator - Toolbar items are positioned incorrectly when the Dashboard is viewed on smaller screens

--- a/src/tables/tabulator.scss
+++ b/src/tables/tabulator.scss
@@ -45,10 +45,27 @@ $root-font-size: 14px;
   padding: 20px 13px;
   background-color: $background-gray;
   overflow: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+
   &:after {
     content: "";
     clear: both;
     display: block;
+  }
+
+  .sa-table__header-space {
+    display: flex;
+    flex-grow: 1;
+  }
+
+  .sa-table__entries {
+    float: none;
+    line-height: 34px;
+    display: flex;
+    flex-grow: 1;
   }
 }
 
